# 5_Phase_Hackathon

phase1_todo/: .gitignore  CLAUDE.md  README.md  directory_tree.txt  main.py  pyproject.toml
phase1_todo/.specify/memory/: constitution.md
phase1_todo/specs/001-todo-console-app/: adr-candidates.md  plan.md  spec.md  tasks.md
phase1_todo/specs_history/: test_report_v1.md
phase1_todo/src/: main.py  todo.py
phase1_todo/tests/: manual_tests.md  run_validation.py
phase_2/: .gitignore
phase_2/.claude/agents/: fastapi-sqlmodel-engineer.md  frontend-engineer.md  monorepo-architect.md  rless-connection-handler.md  token-validator.md
phase_2/.claude/skills/: constitution.md
phase_2/backend/: CLAUDE.md  Dockerfile  __init__.py  auth.py  db.py  main.py  models.py  pyproject.toml  requirements.txt  run_backend.ps1  test_auth.py  test_db_model.py  test_openapi_fix.py  test_performance.py
phase_2/backend/routes/: tasks.py
phase_2/frontend/: middleware.ts
phase_2/frontend/app/: globals.css  layout.tsx  page.tsx
phase_2/frontend/lib/: api-client.ts  auth-client.ts  auth-server.ts  cn.ts  utils.ts
phase_2/history/adr/: 001-monorepo-architecture-uv-workspaces.md  002-backend-technology-stack.md  003-authentication-security-architecture.md
phase_2/scripts/: migrate-better-auth.js
phase_3/.specify/memory/: constitution.md
phase_3/backend/: .env  auth.py  db.py  main.py  mcp_server.py  models.py  pyproject.toml  test_auth.py  test_performance.py
phase_3/backend/routes/: chat.py  diagnostics.py
phase_3/frontend/: package-lock.json  package.json  proxy.ts
(+155 files in other folders)
